E1-1704 alignment issues
E1-1704 alignment issues

--- a/ui.frontend/src/main/webpack/global/styles/components/header/current-promotions.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/current-promotions.scss
@@ -1708,6 +1708,12 @@
         max-height: 70vh;
       }
     }
+
+    @include respond-to-min($tablet) {
+      .offer-details-wrapper {
+        max-height: 80vh;
+      }
+    }
   }
 
   .nv-modal-body::-webkit-scrollbar-thumb {
